objects/ProductLineSummary__c.object
<CustomObject>
    <description>SFDC1-9063 Custom object Product Line Summary is created for Account Overview Report</description>
    <fields>
        <fullName>AccountOverview__c</fullName>
        <label>Account Overview</label>
        <referenceTo>AccountOverview__c</referenceTo>
        <relationshipLabel>Product Line Summaries</relationshipLabel>
        <relationshipName>ProductLineSummaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ActionPointS__c</fullName>
        <inlineHelpText>SFDC1-9063, Field created for entering text, created for account overview report (Not visible for end user created only for internal purposes)</inlineHelpText>
        <label>Action Point(s)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <description>SFDC1-9063, Created for account overview report. Filed to show the name of the product (Not visible to end users, for internal purpose only)</description>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-9063, created for account overview report, lookup field for products (Not visible to end users, for internal purpose only)</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Line Summaries</relationshipLabel>
        <relationshipName>Product_Line_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>SFDC1-9063: Created for account overview report, Key people and points to know for this product.(Not visible to end user for internal purposes only)</description>
        <label>Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Product Line Summary</label>
    <nameField>
        <label>Product Line Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Line Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>